[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cost-calculator"
version = "0.1.0"
description = "AI Prompt Cost Calculator for different LLM providers"
requires-python = ">=3.10"
dependencies = [
    "tiktoken==0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==24.10.0",
    "flake8==7.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
